# jwstar

./: .gitignore  README.md
go/: .goreleaser.yml  go.mod  go.sum  main.go
go/claims/: claims.go
go/cmd/: cmd.go  decodeDIDToJWK.go  generateJWS.go  verifyJWS.go
go/did/: didKey.go
go/jwk/: jwk.go
go/jws/: jws.go
python/: main.py  pyproject.toml
